# llm-101

./: README.md  gpt-theory.md  gpt2.py  notes.md  pyproject.toml
.devcontainer/: devcontainer.json
